@@ -178,14 +178,51 @@ As an example a test for the built-in sin function is written:
 ===========================================================================
 
 
+PARAMETERS AND BRIDGING FIXTURES
+
+
+You can define parameters in order to change mlUnit's behaviour. For example,
+in order to let assert_equals handle NaN values as equal, call:
+
+   >> mlunit_param('equal_nans', true);
+
+You should do this in a test suite's set_up fixture. As of mlUnit 1.6.8, this
+won't affect other suite's tests anymore, i.e. declare equal NaNs for just one
+suite, but not the others. Changes to mlUnit parameters, that are effected in
+either the test function, or the set_up and tear_down fixtures, will be reverted
+after each test's tear_down execution.
+
+You can use these parameters for your own purposes, too. Just be careful
+not to employ names known to mlUnit. Check the list of known parameters with:
+
+   >> help mlunit_param
+
+That being said, you can use parameters, e.g. to bridge information between
+fixture calls. If you calculate some path name in your set_up fixture,
+and want to access it in your tear_down fixture, store it as an mlUnit
+parameter. Although file and directory dependencies are generally discouraged
+in unit tests and should be avoided where possible, let this serve as example:
+
+   function set_up
+      % remember current working directory
+      mlunit_param('mypreviouspwd', pwd);
+      % change to test specific directory
+      cd('specific/path/that/tests/need/to/execute/in');
+
+   function tear_down
+      % restore previous working directory
+      cd(mlunit_param('mypreviouspwd'));
+
+===========================================================================
+
+
 MLUNIT TESTS
 
 
 As mlUnit was developed test-driven, there are a number of tests in the 
 test directory, which can be run by
 
->> addpath('$MLUNIT\mlunit\test');
->> mlunit_test;
+>> recursive_test_run('$MLUNIT\mlunit\test')
 
 The function recursive_test_run uses genpath to build a list of
 subdirectories. Therefore, it can not be used to run the mlUnit internal
