@@ -1,5 +1,6 @@
 %MLUNIT_PARAM Set or get an mlunit parameter
-%  MLUNIT_PARAM(P) returns the current value of mlUnit's parameter named P.
+%  MLUNIT_PARAM(P) returns the current value of mlUnit's parameter named P,
+%  P being a string.
 %
 %  MLUNIT_PARAM(P, V) changes mlUnit behaviour across multiple test calls in the
 %  same MATLAB instance. P is the name of the mlUnit parameter, V its value.
@@ -11,6 +12,14 @@
 %     'equal_nans' - Logical true handles NaNs equal to each other in
 %                    assert_equals and assert_not_equals calls. Logical false
 %                    handles NaNs not equal to each other. Defaults to false.
+%
+%  VALL = MLUNIT_PARAM() returns all of the currently set mlunit parameters,
+%  as a structure. The structure's fields will represent name of parameters,
+%  cleaned by genvarname().
+%  
+%  VALL = MLUNIT_PARAM(VNEW) sets mlunit's parameter configuration to that of
+%  VNEW, returning the previous parameter configuration in VALL.
+%
 
 %  This Software and all associated files are released unter the 
 %  GNU General Public License (GPL), see LICENSE for details.
@@ -18,19 +27,27 @@
 %  $Id$
 function outvalue = mlunit_param(name, invalue)
 
-    % handle usage errors
-    if nargin == 0 || isempty(name)
-        error('Provide the parameter name as first argument.');
-    end
-    
     % get and initialize parameters
     persistent parameters;
     if isempty(parameters)
         parameters = struct();
     end
 
-    % return parameter value before its new value is set
+    % usage for whole parameters structure
+    if nargin == 0 || isstruct(name)
+        % return parameters before setting their new value
+        outvalue = parameters;
+        % set new structure
+        if nargin >= 1
+            parameters = name;
+        end
+        return;
+    end
+
+    % usage for single parameters
     clean_name = genvarname(name);
+
+    % return single parameter value before its new value is set
     if isfield(parameters, clean_name)
         outvalue = parameters.(clean_name);
     else
